# amazon-bedrock-agentcore-agent

./: .env.example  .gitignore  DEPLOYMENT.md  QUICK_START.md  README.md  bedrock_app.py  config.py  main.py  pyproject.toml  test_bedrock_app.py
agent/: strands_agent.py
config/prompts/: __init__.py  default.txt  email_agent.txt  github_agent.txt
docs/: DEPLOYMENT.md  QUICK_START.md
docs/subagents/: EMAIL_AGENT.md  GITHUB_AGENT.md
src/: __init__.py  bedrock_app.py
src/agent/: __init__.py  strands_agent.py
src/tools/: __init__.py
terraform/: README.md
terraform/environments/dev/: main.tf  terraform.tfvars.example  variables.tf
terraform/environments/prod/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/agent-iam/: main.tf  outputs.tf  variables.tf
tools/: __init__.py  custom_tools.py  ses_email.py  subagents.py
